--- a/smart_saloon/pubspec.yaml
+++ b/smart_saloon/pubspec.yaml
@@ -80,11 +80,10 @@ flutter:
         - asset: assets/fonts/Lato-Light.ttf
           weight: 700
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+    - family: KaushanScript
+      fonts:
+        - asset: assets/fonts/KaushanScript-Regular.ttf
+          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
